<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".QuizQuestionActivity"
    android:background="@drawable/q_bg"
    android:layout_gravity="center">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="500dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="80dp"
        android:layout_gravity="center"
        app:cardCornerRadius="35dp"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="22dp"
            android:paddingRight="22dp"
            android:background="@android:color/white">

    <LinearLayout
        android:id="@+id/ll_progressbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:gravity="top"
        android:orientation="horizontal"
        android:layout_marginBottom="50dp"
        >
            <ProgressBar
                android:id="@+id/progressbar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:indeterminate="false"
                android:max="5"
                android:minHeight="50dp"
                android:progress="0"

                />

            <TextView
                android:id="@+id/tv_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="15dp"
                android:textColor="#7A8089"
                android:textSize="14sp"
                tools:text="0/5" />
    </LinearLayout>


            <TextView
                android:id="@+id/tv_question"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="Q1.    What is the capital of United States of America ?"
                android:textColor="#363A43"
                android:textSize="22sp">

            </TextView>

            <TextView
                android:id="@+id/tv_option_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/default_option_bg"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/apple"
                android:textColor="#7A8089"
                android:textSize="18sp">

            </TextView>

            <TextView
                android:id="@+id/tv_option_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/default_option_bg"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/papaya"
                android:textColor="#7A8089"
                android:textSize="18sp">

            </TextView>

            <TextView
                android:id="@+id/tv_option_three"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/default_option_bg"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/grapes"
                android:textColor="#7A8089"
                android:textSize="18sp">

            </TextView>

            <TextView
                android:id="@+id/tv_option_four"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/default_option_bg"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/mango"
                android:textColor="#7A8089"
                android:textSize="18sp">

            </TextView>

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="@drawable/default_submit_bg"
                android:gravity="center"
                android:padding="0dp"
                android:layout_marginBottom="25dp"
                android:text="@string/next"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:clickable="true"
                android:focusable="true">

            </Button>


        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>


</ScrollView>